[package]
name = "faer-core"
version = "0.16.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]
rust-version = "1.67.0"

[dependencies]
faer-entity = { workspace = true, default-features = false }

seq-macro = "0.3"
paste = "1.0"

coe-rs = { workspace = true }
reborrow = { workspace = true }

pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }
gemm = { workspace = true, default-features = false }

num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
bytemuck = { workspace = true }

rand = { workspace = true, optional = true, default-features = false }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
equator = { workspace = true }
log = { workspace = true, optional = true, default-features = false }
matrixcompare-core = { version = "0.1.0", optional = true }

[features]
default = ["std", "rayon", "serde"]
std = [
  "faer-entity/std",
  "gemm/std",
  "pulp/std",
  "matrixcompare-core",
  "num-traits/std",
  "num-complex/std",
]
rayon = ["std", "gemm/rayon", "dep:rayon"]
nightly = ["faer-entity/nightly", "gemm/nightly", "pulp/nightly"]
perf-warn = ["log"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.3"
assert_approx_eq = "1.1.0"
dbgf = "0.1.1"
serde_test = "1.0.176"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
