[package]
name = "faer-lu"
version = "0.17.0"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
paste = "1.0.14"

faer-entity = { workspace = true, default-features = false }

faer-core = { version = "0.17.0", default-features = false, path = "../faer-core" }

coe-rs = { workspace = true }
reborrow = { workspace = true }
pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }

num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
bytemuck = { workspace = true }

rayon = { workspace = true, optional = true }
log = { workspace = true, optional = true, default-features = false }
hurdles = "1.0.1"

[features]
default = ["std", "rayon"]
std = [
  "faer-core/std",
  "pulp/std",
]
perf-warn = ["log", "faer-core/perf-warn"]
rayon = ["std", "faer-core/rayon", "dep:rayon"]
nightly = ["faer-core/nightly", "pulp/nightly"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.3"
assert_approx_eq = "1.1.0"
rayon = { workspace = true }
core_affinity = "0.8"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
