[package]
name = "faer-svd"
version = "0.13.5"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
faer-entity = { workspace = true, default-features = false }

faer-core = { version = "0.13.4", default-features = false, path = "../faer-core" }
faer-qr = { version = "0.13.4", default-features = false, path = "../faer-qr" }

coe-rs = { workspace = true }
reborrow = { workspace = true }
pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }

num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
bytemuck = { workspace = true }

assert2 = { workspace = true, optional = true }
log = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"
nalgebra = "0.32.3"
assert_approx_eq = "1.1.0"
dbgf = "0.1.0"

[features]
default = ["std", "rayon"]
std = [
  "faer-core/std",
  "faer-qr/std",
  "pulp/std",
  "assert2",
]
perf-warn = ["log", "faer-core/perf-warn"]
rayon = [
  "std",
  "faer-core/rayon",
  "faer-qr/rayon",
]
assert2 = ["dep:assert2"]
nightly = [
  "faer-core/nightly",
  "faer-qr/nightly",
  "pulp/nightly",
]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
