[package]
name = "faer"
version = "0.17.1"
edition = "2021"
authors = ["sarah <>"]
description = "Basic linear algebra routines"
readme = "../../README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]

[dependencies]
faer-core     = { version = "0.17.1", path = "../faer-core", default-features = false }
faer-cholesky = { version = "0.17.1", path = "../faer-cholesky", default-features = false }
faer-lu       = { version = "0.17.1", path = "../faer-lu", default-features = false }
faer-qr       = { version = "0.17.1", path = "../faer-qr", default-features = false }
faer-svd      = { version = "0.17.1", path = "../faer-svd", default-features = false }
faer-evd      = { version = "0.17.1", path = "../faer-evd", default-features = false }
faer-sparse   = { version = "0.17.1", path = "../faer-sparse", default-features = false }

coe-rs = { workspace = true }
reborrow = { workspace = true }
pulp = { workspace = true, default-features = false }
dyn-stack = { workspace = true, default-features = false }
bytemuck = { workspace = true }

dbgf = "0.1.1"

num-complex = { workspace = true, default-features = false }

matrixcompare = { version = "0.3", optional = true }

nalgebra = { version = "0.32", optional = true, default-features = false }
ndarray = { version = "0.15", optional = true, default-features = false }
polars = { version = "0.37", optional = true, features = ["lazy"] }

log = { workspace = true, optional = true, default-features = false }

npyz = { version = "0.8", optional = true }

[features]
default = ["std", "rayon", "matrixcompare"]
serde = ["faer-core/serde"]
std = [
  "faer-core/std",
  "faer-cholesky/std",
  "faer-lu/std",
  "faer-qr/std",
  "faer-svd/std",
  "faer-evd/std",
  "faer-sparse/std",
  "matrixcompare",
]
perf-warn = [
  "log",
  "faer-core/perf-warn",
  "faer-cholesky/perf-warn",
  "faer-lu/perf-warn",
  "faer-qr/perf-warn",
  "faer-svd/perf-warn",
  "faer-evd/perf-warn",
  "faer-sparse/perf-warn",
]
rayon = [
  "std",
  "faer-core/rayon",
  "faer-cholesky/rayon",
  "faer-lu/rayon",
  "faer-qr/rayon",
  "faer-svd/rayon",
  "faer-evd/rayon",
  "faer-sparse/rayon",
]
nightly = [
  "faer-core/nightly",
  "faer-cholesky/nightly",
  "faer-lu/nightly",
  "faer-qr/nightly",
  "faer-svd/nightly",
  "faer-evd/nightly",
  "faer-sparse/nightly",
  "pulp/nightly",
]
matrixcompare = ["dep:matrixcompare"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
polars = ["dep:polars"]
npy = ["std", "dep:npyz"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
nalgebra = "0.32"
ndarray = "0.15"
polars = { version = "0.37", features = ["lazy", "parquet"] }

[[example]]
name = "conversions"
required-features = ["nalgebra", "ndarray"]

[[example]]
name = "polars"
required-features = ["polars" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
